<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textRule"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="fill_vertical"
        android:text="@string/textRule"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textYourCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textYourCount"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/YourCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/YourCount"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textRobotCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textRoborCount"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/RobotCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="onClick"
                android:text="@string/RobotCount"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textCubes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/textCubes"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textYourPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/textYourPoints"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textRobotPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textRobotPoints"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonThrow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/buttonThrow"
        android:textColor="@android:color/background_light" />
</LinearLayout>

