<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textLoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_weight="1"
        android:text="@string/textLoose"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageLoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/imageLoose"
        app:srcCompat="@drawable/images" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:onClick="onNew"
        android:text="@string/buttonNewGame"
        android:textColor="@android:color/background_light" />
</LinearLayout>